memo/memo/tests/fail-unit-return-type.stderr
error: memoized functions cannot have unit return type - there is no value to cache
 --> tests/fail-unit-return-type.rs:4:26
  |
4 | fn test_unit_return() -> () {
  |                          ^^
